[DLAB-1248] Fixed bottom header line is not drawn for all grid on FireFox

--- a/services/self-service/src/main/resources/webapp/src/app/resources/resources-grid/resources-grid.component.scss
+++ b/services/self-service/src/main/resources/webapp/src/app/resources/resources-grid/resources-grid.component.scss
@@ -92,6 +92,7 @@ table {
     width: 18%;
     padding-right: 5px;
     padding-left: 24px;
+    background-color: transparent;
   }
 
   .status-col,
@@ -122,13 +123,13 @@ table {
   .cost-col {
     width: 10%;
     text-align: center;
-
   }
 
   .actions-col {
     width: 10%;
     padding-right: 24px;
     text-align: right;
+    background-color: transparent;
   }
 }
 
